Fix mobile overflow

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,7 +30,7 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100vh min-content 85vh 15vh;
+  grid-template-rows: 100vh min-content 50vh 15vh;
 }
 
 .btn {
