--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,15 +1,12 @@
-#contact {
+.contact {
   background-color: $color-primary;
   color: $color-white;
   display: grid;
-  grid-template-rows: 33vh repeat(2, min-content);
+  // grid-template-rows: 33vh repeat(2, min-content);
+  grid-template-rows: 100px 1fr;
   justify-items: center;
   align-items: center;
-  grid-row-gap: 2rem;
-
-  h2 {
-    grid-row: 2 / 3;
-  }
+  // grid-row-gap: 2rem;
 }
 
 .social-media {
@@ -17,14 +14,12 @@
   justify-content: center;
   width: 35vw;
   justify-content: space-between;
-  grid-row: 3 / -1;
-
   i {
     margin-right: 1.3rem;
   }
 
   &__link:link {
-    transition: all .2s;
+    transition: all 0.2s;
   }
 
   &__link:link,
@@ -32,7 +27,6 @@
     color: $color-white;
     font-size: 2.4rem;
     text-decoration: none;
-    
 
     &:hover {
       transform: translateY(-3px);
