--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,6 @@
 .header {
   display: grid;
   grid-template-rows: min-content 1fr;
-  background-color: $color-primary;
 }
 
 .navbar {
