--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -20,8 +20,6 @@
   }
 
   .navbar__list {
-    // justify-content: flex-end;
-
     &__link {
       font-size: 1.6rem;
       padding: 2rem;
@@ -29,6 +27,8 @@
   }
 
   .projects {
+    padding: 0;
+
     h2 {
       font-size: 3.6rem;
     }
@@ -38,18 +38,21 @@
     }
 
     img {
-      max-width: 350px;
+      max-width: 320px;
       margin: 0 auto;
       margin-bottom: 2.4rem;
     }
   }
 
-  #contact h2 {
+  .project-card__description .project-links {
+    max-width: 75%;
+  }
+
+  .contact h2 {
     font-size: 4.2rem;
   }
 
-  #footer p {
+  .footer p {
     max-width: 25rem;
-    // margin: 0 auto;
   }
 }
