--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -16,7 +16,7 @@
 
 .project-tile {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40rem, 50rem));
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 50rem));
   grid-column-gap: 3rem;
   grid-row-gap: 8rem;
   align-items: center;
